<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#999999"
    tools:context="com.example.ben.hoffman_calculator.Calculator">

    <TableRow
        android:id="@+id/row1"
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/row2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/clear_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="#000000"
            android:text="@string/clear"
            android:textColor="#ffffff"
            android:textScaleX="1"
            android:textSize="24sp" />

        <Button
            android:id="@+id/divide_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="#000000"
            android:text="@string/div"
            android:textColor="#ffffff"
            android:textScaleX="1"
            android:textSize="24sp" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="#00549f"
            android:text="@string/b"
            android:textColor="#ffffff"
            android:textScaleX="1"
            android:textSize="24sp" />

    </TableRow>

    <TableRow
        android:id="@+id/row2"
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/row3"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/button1"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="#000000"
            android:text="@string/_1"
            android:textColor="#ffffff"
            android:textScaleX="1"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="#000000"
            android:text="@string/_2"
            android:textColor="#ffffff"
            android:textScaleX="1"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="#000000"
            android:text="@string/_3"
            android:textColor="#ffffff"
            android:textScaleX="1"
            android:textSize="24sp" />

        <Button
            android:id="@+id/multiply_button"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="#00549f"
            android:text="@string/x"
            android:textColor="#ffffff"
            android:textScaleX="1"
            android:textSize="24sp" />

    </TableRow>

    <TableRow
        android:id="@+id/row3"
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/row4"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/button4"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="#000000"
            android:text="@string/_4"
            android:textColor="#ffffff"
            android:textScaleX="1"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="#000000"
            android:text="@string/_5"
            android:textColor="#ffffff"
            android:textScaleX="1"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="#000000"
            android:text="@string/_6"
            android:textColor="#ffffff"
            android:textScaleX="1"
            android:textSize="24sp" />

        <Button
            android:id="@+id/sub_button"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="#00549f"
            android:text="@string/minus"
            android:textColor="#ffffff"
            android:textScaleX="1"
            android:textSize="24sp" />

    </TableRow>

    <TableRow
        android:id="@+id/row4"
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/row5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/button7"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="#000000"
            android:text="@string/_7"
            android:textColor="#ffffff"
            android:textScaleX="1"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="#000000"
            android:text="@string/_8"
            android:textColor="#ffffff"
            android:textScaleX="1"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button9"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="#000000"
            android:text="@string/_9"
            android:textColor="#ffffff"
            android:textScaleX="1"
            android:textSize="24sp" />

        <Button
            android:id="@+id/add_button"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="#00549f"
            android:text="@string/plus"
            android:textColor="#ffffff"
            android:textScaleX="1"
            android:textSize="24sp" />

    </TableRow>

    <TableRow
        android:id="@+id/row5"
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/decimal_button"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="#000000"
            android:text="@string/decimal"
            android:textColor="#ffffff"
            android:textScaleX="1"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button0"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="#000000"
            android:text="@string/_0"
            android:textColor="#ffffff"
            android:textScaleX="1"
            android:textSize="24sp" />

        <Button
            android:id="@+id/equals_button"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="#00549f"
            android:text="@string/equals"
            android:textColor="#ffffff"
            android:textScaleX="1"
            android:textSize="24sp" />

    </TableRow>

    <TextView
        android:id="@+id/display"
        android:layout_width="329dp"
        android:layout_height="120dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/row1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="14dp" />


</android.support.constraint.ConstraintLayout>
